--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 markdown: kramdown
 
-
+title: Discrete Techonology: The Assistive Smart Jacket
+description: [A short description of your site's purpose]
