--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Minimal theme
-description: Minimal is a theme for GitHub Pages.
+title: Discrete Technology: The Assistive Smart Jacket
+description: Hello! My name is Anvika and I am a high school senior with a keen interest in computer engineering. This portfolio shares why I decided to develop discreet technology to assist the visually impaired, the technical details behind my project, and the invaluable lessons I’ve gained along the way!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
