--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Discrete Technology
 description: Hello! My name is Anvika and I am a high school senior with a keen interest in computer engineering. This portfolio shares the technical details behind my assistive smart jacket and the invaluable lessons I’ve gained while developing it!
+logo: logo.png
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
