--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Discrete Technology
-description: Hello! My name is Anvika and I am a high school senior with a keen interest in computer engineering. This portfolio shares the technical details behind my assistive smart jacket and the invaluable lessons I’ve gained while developing it!
+title: Technology
+description: Hello! My name is Anvika and I am a high school senior interested in computer engineering. This summer, I developed an assistive smart jacket to help the visually impaired community! My journey with assistive technology started by developing an object detection system that offered users extra sensory feedback of their surroundings. I have since turned that project into a jack that discretely aids the user navigate a room. I’m excited to continue my education in engineering and I believe in technology’s capacity to mold a more promising tomorrow. I hope this project serves as an inspiration to other young minds! There are countless ways to expand on my work below and if you find yourself exploring them, reach out to me at anvikavasireddy@gmail.com!
 logo: thumbnail.png
 show_downloads: true
 google_analytics:
