--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Assistive Technology
-#description: Hello! My name is Anvika and I am a rising high school senior interested in computer engineering! This summer I developed an assistive smart jacket to help the visually impaired community. My journey with assistive technology started with developing an object detection system that offers users sensory feedback about their surroundings. I have since turned that project into a jacket that discretely aids the user navigate a room. There are countless ways to expand on my work and if you find yourself exploring them, reach out to me at anvikavasireddy@gmail.com!
+description: Contact Info: anvikavasireddy@gmail.com
 logo: Portfolio.jpg
 show_downloads: true
 google_analytics:
