--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Assistive Technology
-description: Contact Info: anvikavasireddy@gmail.com
+description:   
 logo: Portfolio.jpg
 show_downloads: true
 google_analytics:
