--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Assistive Technology
-description:   
+description: Anvika's Engineering Portfolio  
 logo: Portfolio.jpg
 show_downloads: true
 google_analytics:
